--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ZenV"
         tools:targetApi="31">
         <activity
+            android:name=".WellcomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".InterestActivity"
             android:exported="false" />
         <activity
@@ -22,7 +25,10 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".WellcomeActivity"
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,9 +36,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
     </application>
 
 </manifest>
