--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.ZenV"
         tools:targetApi="31">
         <activity
-            android:name=".DetailActivity"
+            android:name=".SplashActivity"
             android:exported="false" />
         <activity
             android:name=".WellcomeActivity"
@@ -29,15 +29,13 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
         <activity
-
-            android:name=".SplashActivity"
+            android:name=".DetailActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
